--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+<div id="loading-screen">
+    <img src="images/loader.gif" alt="Loading..." />
+</div>
     <header>
 <nav class="navbar">
     <div class="container navbar-container">
@@ -220,7 +223,7 @@
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
                         <h3 class="timeline-date">2017</h3>
-                        <p>Kathuray Furnishers was founded as a small furniture company</p>
+                        <p>Kathuray Furnishers was founded with a vision to blend innovation with tradition.</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-right">
@@ -232,7 +235,7 @@
                 <div class="timeline-item timeline-left">
                     <div class="timeline-content">
                         <h3 class="timeline-date">2020</h3>
-                        <p>Became one of Barishal's highest-rated furniture brand online.</p>
+                        <p>Became one of the highest-rated furniture brand pages online.</p>
                     </div>
                 </div>
                 <div class="timeline-item timeline-right">
@@ -249,8 +252,8 @@
                 </div>
                 <div class="timeline-item timeline-right">
                     <div class="timeline-content">
-                        <h3 class="timeline-date">2025</h3>
-                        <p>We continue to grow our business thanks to our customers' support and will keep doing so as long as they stand with us.</p>
+                        <h3 class="timeline-date">2024</h3>
+                        <p>As of now, we take great pride in saying that we are one of the most prestigious furniture brands known.</p>
                     </div>
                 </div>
             </div>
@@ -308,7 +311,7 @@
 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Kathuray Furnishers. All rights reserved.</p>
+                <p>&copy; 2017 Kathuray Furnishers. All rights reserved.</p>
             </div>
         </div>
     </footer>
